--- a/src/sass/components/left-block.scss
+++ b/src/sass/components/left-block.scss
@@ -78,7 +78,7 @@
   position: absolute;
   top: 1.25rem;
   left: -1.0625rem;
-  content: 'Dec, 17';
+  content: attr(data-text);
   color: #fff;
   width: 3.75rem;
 }
@@ -87,7 +87,7 @@
   position: absolute;
   top: 1.25rem;
   left: -1.0625rem;
-  content: 'Jan, 17';
+  content: attr(data-text);
   color: #fff;
   width: 150px;
 }
